Fix PDF download, RUC scraping performance, and MercadoPago endpoints